single blog page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -581,7 +581,7 @@ p {
 
 .blog_banner {
     position: relative;
-    background: url(../../img/blog_details_banner.jpg) no-repeat center center;
+    background: rgba(0 114 225);
     min-height: 360px;
     z-index: 1;
     background-size: cover;
