--- a/public/css/main.css
+++ b/public/css/main.css
@@ -469,7 +469,12 @@ p {
 .footer_section {
     background: #204ecf;
     text-align: center;
-    padding: 20px 0px;
+    padding: 20px 0px 0px 0px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+
 }
 
 .footer_section_ul {
@@ -1473,3 +1478,19 @@ textarea {
 .dis_none {
     display: none;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+::-webkit-scrollbar-track {
+    background: white;
+}
+::-webkit-scrollbar-thumb {
+    background: black; 
+    border-radius: 10px;
+    
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+  
