--- a/public/css/main.css
+++ b/public/css/main.css
@@ -465,18 +465,24 @@ p {
 .footer_copy_right p {
     color: #a5a5a5;
 }
+.page-container {
+    position: relative;
+    min-height: 100vh;
+}
+.content-wrap{
+    padding-bottom: 124px;    /* Footer height */
+}
 
 .footer_section {
     background: #204ecf;
     text-align: center;
     padding: 20px 0px 0px 0px;
-    position: fixed;
-    left: 0;
+    position: absolute;
     bottom: 0;
     width: 100%;
-
+    height: 124px;
+   
 }
-
 .footer_section_ul {
     display: flex;
     justify-content: center;
@@ -1493,4 +1499,3 @@ textarea {
 ::-webkit-scrollbar-thumb:hover {
     background: #555; 
 }
-  
